[package]
name = "neutron-star-constants"
version = "0.1.0"
authors = ["Jordan Earls <earlz@earlz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.struct_deser]
version = "0.1.1"
default-features = false

[dependencies.struct_deser-derive]
version = "0.1.0"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num]
version = "0.2.0"
default-features = false

[dependencies.num-derive]
version = "0.3.0"
default-features = false